[inwicast-plugin-bundle] Fixed bug with new Claroline javascripts template path

--- a/Resources/views/Media/videosListTinymce.html.twig
+++ b/Resources/views/Media/videosListTinymce.html.twig
@@ -7,7 +7,7 @@
 
 {% block javascripts_header %}
     {{ parent() }}
-    {% include 'ClarolineCoreBundle:Layout:javascripts_headers.html.twig' %}
+    {% include 'ClarolineCoreBundle:Layout:javascripts.html.twig' %}
 {% endblock %}
 
 {% block layout %}
